fix(notifier): fix latency retrieving plugin information